--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon -L server.js",
     "client": "npm start --prefix client",
     "clientinstall": "npm install --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"CHOKIDAR_USEPOLLING=true npm run client\""
   },
   "author": "Kshitij Girkar",
   "license": "ISC",
@@ -19,7 +19,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.17"
+    "mongoose": "^5.11.15"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
